# gulikit-tt-max-re

./: .gitignore  README.md  pyproject.toml  small_research.md  ttmax-apg-format.md  ttmax-findings.md  ttmax-native-firmware.md
artifacts/: ttmax-v68-update-session.json  ttmax-v68-update-usbpcap1.pcapng
artifacts/teardown-video/: yt-caption-en-US.xml  yt-caption-en.txt  yt-caption-zh.txt  yt-caption-zh.xml
tools/: analyze-ttmax-firmware.py  apg-config.example.json  apply-firmware-patch.py  download-gulikit-file.py  extract-usbms-writes.py  generate-apg-file.py  gulikit-apg-share.ps1  inspect-apg-file.py  ocr-gulikit-captcha.py  scan-gulikit-file-ids.py  ttmax-config.example.json  ttmax-hid-probe.py  ttmax-paddle-daemon.py
